--- a/chat-board-webui/package.json
+++ b/chat-board-webui/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
