--- a/chat-board-api/pom.xml
+++ b/chat-board-api/pom.xml
@@ -52,6 +52,17 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework</groupId>-->
+<!--			<artifactId>spring-websocket</artifactId>-->
+<!--			<version>5.2.2.RELEASE</version>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>org.springframework</groupId>-->
+<!--			<artifactId>spring-messaging</artifactId>-->
+<!--			<version>5.2.2.RELEASE</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 
