--- a/chat-board-api/src/main/resources/application.properties
+++ b/chat-board-api/src/main/resources/application.properties
@@ -8,11 +8,12 @@ spring.profiles.default=h2
 #spring.datasource.password = sa
 
 #spring.datasource.url=jdbc:h2:file:/home/hesam/data/demo
-spring.datasource.url=jdbc:h2:file:/home/hesam/data/demo;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
+spring.datasource.url=jdbc:h2:file:/app/chatboardDB;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+server.port=8888
