--- a/chat-board-api/src/main/resources/application.properties
+++ b/chat-board-api/src/main/resources/application.properties
@@ -1,19 +1,12 @@
-spring.profiles.default=h2
+spring.profiles.default=develop
 
-#spring.jpa.database-platform=com.codeworm47.chatboard.configs.hibernate.sqlite.SQLiteDialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url = jdbc:sqlite:sqlitesample.db
-#spring.datasource.driver-class-name = org.sqlite.JDBC
-#spring.datasource.username = sa
-#spring.datasource.password = sa
+server.port=${API_SERVER_PORT}
 
-#spring.datasource.url=jdbc:h2:file:/home/hesam/data/demo
-spring.datasource.url=jdbc:h2:file:/app/chatboardDB;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
+spring.datasource.url=jdbc:h2:${DB_PATH};DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
-server.port=8888
+spring.jpa.generate-ddl=${JPA_GENERATE_DDL}
+spring.jpa.hibernate.ddl-auto=${JPA_HIBERNATE_DDL_AUTO}
