final touch ups

--- a/docker/.env
+++ b/docker/.env
@@ -5,8 +5,8 @@ WEB_SOCKET_PORT=9091
 DB_PATH=file:/app/chatboardDB
 DB_USERNAME=sa
 DB_PASSWORD=sa
-JPA_GENERATE_DDL=true
-JPA_HIBERNATE_DDL_AUTO=create
+JPA_GENERATE_DDL=false
+JPA_HIBERNATE_DDL_AUTO=none
 
 DEFAULT_PAGE_SIZE=50
-CORS_ALLOWED_ORIGINS=http://localhost:3000
+CORS_ALLOWED_ORIGINS=http://localhost:3001
