--- a/chat-board-webui/package.json
+++ b/chat-board-webui/package.json
@@ -19,8 +19,8 @@
     "socket.io-client": "^2.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "PORT=3001 react-scripts start",
+    "build": "PORT=3001 react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
