--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -21,6 +21,8 @@ ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
 COPY mvn-entrypoint.sh /usr/local/bin/mvn-entrypoint.sh
 COPY settings-docker.xml /usr/share/maven/ref/
 
+RUN chmod +x /usr/local/bin/mvn-entrypoint.sh
+
 ENTRYPOINT ["/usr/local/bin/mvn-entrypoint.sh"]
 CMD ["mvn", "clean", "install"]
 WORKDIR /app/target
